# HostInfo

./: .gitmodules  README.md
Service/: CMakeLists.txt  build.py
Service/src/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
